pkg/lang/testdata/ub/constraints/invalid/for-each-on-set-kind.ub
constraints: [
  { kind: exactly-one-of, @for-each: var.replicas, fields: [var.a, var.b] },
]
